# simplified-logger

./: LICENCE  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
.github/: publish-package-github.yml  publish-package-pypl.yml
.github/workflow/: publish-package-github.yml
.github/workflows/: publish-package-pypi.yml  publish-package-pypl.yml
docs/: architecture.drawio  architecture.md
lib/: standard-logger.py  std_log.py  std_log.pyi
src/std_log/: __init__.py  std_log.py  std_log.pyi
