[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplified_logging"
version = "1.0.13.5"
description = "A lightweight Python logging wrapper that simplifies Python's standard logging module"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "krigjo25", email = "krigjo25@outlook.com" }]
keywords = ["logging", "logger", "simple", "wrapper", "standard-logging"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Logging",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/krigjo25/simplified-logger"
Repository = "https://github.com/krigjo25/simplified-logger"
Issues = "https://github.com/krigjo25/simplified-logger/issues"

[project.optional-dependencies]
dev = ["black", "mypy", "pylint", "pytest"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["std_log", "std_log.*"]

[tool.setuptools.package-data]
std_log = ["*.pyi"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
	"C0111",  # missing-docstring
	"C0103",  # invalid-name
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
	"unit: Unit tests",
	"integration: Integration tests",
]

[tool.coverage.run]
source = ["std_log"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise AssertionError",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"if TYPE_CHECKING:",
	"pass",
]
